# PharmasyMS

./: CMakeLists.txt  README.md  login_frame.glade  main.c
untitled/: CMakeLists.txt  login_frame.glade  login_frame.glade~  main  main.c
